[project]
name = "day-11-guardrails-hitl-responsible-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-adk[extensions]>=0.3.0",
    "google-genai>=1.0.0",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.13",
    "nemoguardrails>=0.10.0",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
]
